@@ -1,3 +1,7 @@
+2004-11-05    <lgs@sicem.biz>
+
+	* newsitems.py (item): added item for PyGTK 2.4.1 by pachi
+
 2004-10-05  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
 	* downloads.src: updated the current version
